dfir_rs/tests/compile-fail-stable/surface_port_naked_overwrite_simple.rs
../compile-fail/surface_port_naked_overwrite_simple.rs